Start version 2.0 (move to Java 8)